--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <p align="center"> <font color="green" size="1" face"Courier New"> Data urodzenia:15_luty_2000</font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> x<sup>*</sup>x=x<sup>2</sup> </font> </p> <br>
-  
+  <fieldset>
+     <LEGEND> żart o bombie </LEGEND> 
+Gdzie jest Ania po wybuchu bomby<br> 
+Wszędzie<br> 
+  </fieldset>
  
 </body>
 </html>
