--- a/index.html
+++ b/index.html
@@ -36,10 +36,23 @@
     <p align="left"> <font color="black" size="3" face"Araial"> H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> x<sup>*</sup>x=x<sup>2</sup> </font> </p> <br>
   <fieldset>
-     <LEGEND> żart o bombie </LEGEND> 
-Gdzie jest Ania po wybuchu bomby<br> 
-Wszędzie<br> 
+     <LEGEND><h1 ALIGN=right >Żart o bombie</h1></LEGEND> 
+         Gdzie jest Ania po wybuchu bomby<br> 
+         Wszędzie<br> 
+        </fieldset>
+       <FIELDSET> 
+<LEGEND> Nazwa dowcipu </LEGEND> 
+treść całego dowcipu  pierwszy wiersz<br> 
+……………………….. 
+treść całego dowcipu  ostatni wiersz<br>
+       
   </fieldset>
+       <FIELDSET> 
+<LEGEND> Nazwa dowcipu </LEGEND> 
+treść całego dowcipu  pierwszy wiersz<br> 
+……………………….. 
+treść całego dowcipu  ostatni wiersz<br>
+             </fieldset>
  
 </body>
 </html>
