--- a/index.html
+++ b/index.html
@@ -40,19 +40,16 @@
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br> 
         </fieldset>
-       <FIELDSET> 
-<LEGEND> Nazwa dowcipu </LEGEND> 
-treść całego dowcipu  pierwszy wiersz<br> 
-……………………….. 
-treść całego dowcipu  ostatni wiersz<br>
-       
-  </fieldset>
-       <FIELDSET> 
-<LEGEND> Nazwa dowcipu </LEGEND> 
-treść całego dowcipu  pierwszy wiersz<br> 
-……………………….. 
-treść całego dowcipu  ostatni wiersz<br>
-             </fieldset>
+  <fieldset>
+     <LEGEND><h1 ALIGN=right >Żart o bombie</h1></LEGEND> 
+         Gdzie jest Ania po wybuchu bomby<br> 
+         Wszędzie<br> 
+        </fieldset>
+ <fieldset>
+     <LEGEND><h1 ALIGN=right >Żart o bombie</h1></LEGEND> 
+         Gdzie jest Ania po wybuchu bomby<br> 
+         Wszędzie<br> 
+        </fieldset>
  
 </body>
 </html>
