--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <p align="left"> <font color="black" size="3" face"Araial"> H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> x<sup>*</sup>x=x<sup>2</sup> </font> </p> <br>
   <fieldset>
-     <LEGEND><h6 ALIGN=left >Żart o bombie</h6></LEGEND> 
+     <LEGEND><h7 ALIGN=left >Żart o bombie</h7></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br> 
         </fieldset>
   <fieldset>
-     <LEGEND><h6 ALIGN=center >Żart o blondynce i kocie</h6></LEGEND> 
+     <LEGEND><h5 ALIGN=center >Żart o blondynce i kocie</h5></LEGEND> 
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
@@ -50,6 +50,8 @@
      <LEGEND><h6 ALIGN=right >Żart o siatkarzach </h6></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
+      nazwisko ucznia imie ucznia
+     Kopacz&nbsp;Kacper
         </fieldset>
  
 </body>
