--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
     <p align="left"> <font color="black" size="3" face"Araial"> H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> x<sup>*</sup>x=x<sup>2</sup> </font> </p> <br>
   <fieldset>
-     <LEGEND><h7 ALIGN=left >Żart o bombie</h7></LEGEND> 
+     <LEGEND><h7 ALIGN=left>Żart o bombie</h7></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br> 
         </fieldset>
   <fieldset>
-     <LEGEND><h5 ALIGN=center >Żart o blondynce i kocie</h5></LEGEND> 
+     <LEGEND><h5 ALIGN=center>Żart o blondynce i kocie</h5></LEGEND> 
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
         </fieldset>
  <fieldset>
-     <LEGEND><h6 ALIGN=right >Żart o siatkarzach </h6></LEGEND> 
+     <LEGEND><h6 ALIGN=right>Żart o siatkarzach </h6></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
-      nazwisko ucznia imie ucznia
-     Kopacz&nbsp;Kacper
+      nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
+     Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
         </fieldset>
- 
+ <body bgcolor="silver">treść strony></body> 
 </body>
 </html>
