--- a/index.html
+++ b/index.html
@@ -35,24 +35,29 @@
     <p align="center"> <font color="green" size="1" face"Courier New"> Data urodzenia:15_luty_2000</font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
     <p align="left"> <font color="black" size="3" face"Araial"> x<sup>*</sup>x=x<sup>2</sup> </font> </p> <br>
+     <body bgcolor="silver">
   <fieldset>
      <LEGEND><h7 ALIGN=left>Żart o bombie</h7></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
-         Wszędzie<br> 
+         Wszędzie<br>
+       <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=yellow>
         </fieldset>
   <fieldset>
      <LEGEND><h5 ALIGN=center>Żart o blondynce i kocie</h5></LEGEND> 
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
+       <HR SIZE=5 WIDTH=60% ALIGN=LEFT COLOR=cyan>
         </fieldset>
  <fieldset>
      <LEGEND><h6 ALIGN=right>Żart o siatkarzach </h6></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
+      <HR SIZE=6 WIDTH=70% ALIGN=LEFT COLOR=purple>
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
         </fieldset>
- <body bgcolor="silver">treść strony></body> 
+          
+</body> 
 </body>
 </html>
