--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     <p align="left"> <font color="black" size="3" face"Araial"> x<sup>*</sup>x=x<sup>2</sup> </font> </p> <br>
      <body bgcolor="silver">
   <fieldset>
-     <LEGEND><h7 ALIGN=left>Żart o bombie</h7></LEGEND> 
+     <LEGEND><h1 ALIGN="left">Żart o bombie</h1></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br>
        <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=yellow>
         </fieldset>
   <fieldset>
-     <LEGEND><h5 ALIGN=center>Żart o blondynce i kocie</h5></LEGEND> 
+     <LEGEND><h2 ALIGN="center">Żart o blondynce i kocie</h2></LEGEND> 
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
        <HR SIZE=5 WIDTH=60% ALIGN=LEFT COLOR=cyan>
         </fieldset>
  <fieldset>
-     <LEGEND><h6 ALIGN=right>Żart o siatkarzach </h6></LEGEND> 
+     <LEGEND><h3 ALIGN="right">Żart o siatkarzach </h3></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
       <HR SIZE=6 WIDTH=70% ALIGN=LEFT COLOR=purple>
