--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
         </fieldset>
+          <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
+<h1> Ty zaproponuj swoje, związane z informatyką</h1> 
+<UL TYPE=circle>  
+      <LI> <b>Pogrubienie:</b> <&nbsp;b > < /b >  
+      <LI> <i>Kursywa:</i><&nbsp;i > < /i > 
+      <LI> <u>Podkreślenie:</u> <&nbsp;u> < /u>
+</UL> 
           
 </body> 
 </body>
