--- a/index.html
+++ b/index.html
@@ -57,13 +57,45 @@
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
         </fieldset>
+     <br><br><br>
           <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
-<h1> Ty zaproponuj swoje, związane z informatyką</h1> 
-<UL TYPE=circle>  
+          <h1> Ty zaproponuj swoje, związane z informatyką</h1> 
+<UL TYPE=disc>  
       <LI> <b>Pogrubienie:</b> <&nbsp;b > < /b >  
       <LI> <i>Kursywa:</i><&nbsp;i > < /i > 
       <LI> <u>Podkreślenie:</u> <&nbsp;u> < /u>
 </UL> 
+<UL TYPE=circle>  
+      <LI> <strike>Przekreślenie:</strike> <&nbsp;strike > < /strike >  
+      <LI> Index<sup>górny:</sup><&nbsp;sup > < /sup > 
+      <LI> Index<sub>dolny:</sub> <&nbsp;sub> < /sub>
+</UL> 
+<UL TYPE=square>  
+      <LI> Przejście do nowego wiersza w tekscie<br>
+      <LI> Zapobieganie automatycznemu przenoszeniu fragmentu tekstu do nowego wiersza: <&nbsp;nobr >< /nobr >
+      <LI> Spacja niełamliwa:&nbsp; & nbsp;
+</UL>
+<br><br><br> 
+     <h2> poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
+     <h2> Ty zaproponuj swoje, związane z informatyką</h2> 
+           <OL TYPE=1 START=2>  
+<LI><&nbsp;H1 > Będzie największym nagłówkiem
+<LI><&nbsp;H2 >...<&nbs;H5 >Będą coraz mniejsze.
+<LI> lista 
+<LI> numerowana 
+</OL>  
+           <OL TYPE=A START=3>  
+<LI> To   
+<LI> jest 
+<LI> lista 
+<LI> numerowana 
+</OL>  
+           <OL TYPE=A START=3>  
+<LI> To   
+<LI> jest 
+<LI> lista 
+<LI> numerowana 
+</OL>  
           
 </body> 
 </body>
