--- a/index.html
+++ b/index.html
@@ -77,25 +77,28 @@
 </UL>
 <br><br><br> 
      <h2> poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
-     <h2> Ty zaproponuj swoje, związane z informatyką</h2> 
+     <h2> Ty zaproponuj swoje, związane z informatyką</h2>
+           <h4>Nagłówki w treści strony WWW.</h4>
            <OL TYPE=1 START=2>  
 <LI><&nbsp;H1 > Będzie największym nagłówkiem
 <LI><&nbsp;H2 >...<&nbs;H5 >Będą coraz mniejsze.
-<LI> lista 
-<LI> numerowana 
+<LI><&nbsp;H6 >będzie najmniejszym nagłówkiem
+</OL>
+     <h4>Możliwości funkcj font</h4>
+           <OL TYPE=a START=2>  
+<LI><&nbsp;font size="wielkość czcionki"> 
+<LI><&nbsp;font color="kolor czcionki">
+<LI><&nbsp;font face="rodzaj czcionki">  
 </OL>  
-           <OL TYPE=A START=3>  
-<LI> To   
-<LI> jest 
-<LI> lista 
-<LI> numerowana 
+  <font color="red">   
+     <h4>3 Najprostsze rodzaje kolorów do użycia w funkcji font</h4>
+           <OL TYPE=I START=2>  
+<LI> Nazwą:red-czerwony,green-zielony,blue-niebieski
+<LI> RBG:rbg(255,0,0)-czerwony,rbg(0,255,0)-zielony,rbg(0,0,255)-niebieski 
+<LI> Hexadecymalny,#RRGGBB:#FF0000-czerwony,#00FF00-zielony,#0000FF-niebieski 
 </OL>  
-           <OL TYPE=A START=3>  
-<LI> To   
-<LI> jest 
-<LI> lista 
-<LI> numerowana 
-</OL>  
+  </font>     
+       
           
 </body> 
 </body>
