--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
      <h2> poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
      <h2> Ty zaproponuj swoje, związane z informatyką</h2>
            <h4>Nagłówki w treści strony WWW.</h4>
+<font color="red">       
            <OL TYPE=1 START=2>  
 <LI><&nbsp;H1 > Będzie największym nagłówkiem
 <LI><&nbsp;H2 >...<&nbs;H5 >Będą coraz mniejsze.
@@ -89,15 +90,72 @@
 <LI><&nbsp;font size="wielkość czcionki"> 
 <LI><&nbsp;font color="kolor czcionki">
 <LI><&nbsp;font face="rodzaj czcionki">  
-</OL>  
-  <font color="red">   
+</OL>    
      <h4>3 Najprostsze rodzaje kolorów do użycia w funkcji font</h4>
            <OL TYPE=I START=2>  
 <LI> Nazwą:red-czerwony,green-zielony,blue-niebieski
 <LI> RBG:rbg(255,0,0)-czerwony,rbg(0,255,0)-zielony,rbg(0,0,255)-niebieski 
 <LI> Hexadecymalny,#RRGGBB:#FF0000-czerwony,#00FF00-zielony,#0000FF-niebieski 
 </OL>  
-  </font>     
+ </font>
+     <br><br><br> 
+<h3> poniżej będą trzy poziomy numerowania/wyliczenia z różnymi  rodzajami numerowania/wyliczenia</h3> 
+<h3> Ty zaproponuj swoje, związane z informatyką</h3> 
+     <h2>2. Popularne interfejsy urządzeń peryferyjnych do komputera:</h2>
+
+<h3>B. Interfejsy na przesył obrazu</h3>
+<ol type="i"> <!-- małe rzymskie liczby -->
+<li>HDMI
+<ul>
+<li>Type A - Standard</li>
+<li>Type B - Dual-Link</li>
+<li>Type C - Mini</li>
+<li>Type D - Micro</li>
+<li>Type E - Zawiera blokującą osłonę...</li>
+</ul>
+</li>
+
+<li>DVI
+<ul>
+<li>DVI-I – przesyła dane cyfrowe i analogowe</li>
+<li>DVI-D – przesyła dane cyfrowe</li>
+<li>DVI-A – przesyła dane analogowe</li>
+</ul>
+</li>
+
+<li>D-SUB
+<ul>
+<li>DE-9 – Standard</li>
+<li>DE-9M – Standard bez śrub mocujących</li>
+<li>DA-15 – Złącze GamePort</li>
+<li>DE-15F – Złącze VGA, SVGA i XGA</li>
+</ul>
+</li>
+</ol>
+
+<h3>C. Interfejsy na przesył audio</h3>
+<ol type="i">
+<li>Jack
+<ul>
+<li>Jack 6,3mm</li>
+<li>Jack 3,5mm (minijack)</li>
+<li>Jack 2,5mm (microjack)</li>
+</ul>
+</li>
+</ol>
+
+<h3>D. Interfejsy na przesył danych</h3>
+<ol type="i">
+<li>USB
+<ul>
+<li>Type A (USB 1.0 &amp; 2.0)</li>
+<li>Type B (USB 1.0 &amp; 2.0)</li>
+<li>Mini A (USB 2.0)</li>
+<li>Mini B (USB 2.0)</li>
+<li>Mini AB (USB 2.0)</li>
+</ul>
+</li>
+</ol>
        
           
 </body> 
