--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
      <br><br><br> 
 <h3> poniżej będą trzy poziomy numerowania/wyliczenia z różnymi  rodzajami numerowania/wyliczenia</h3> 
 <h3> Ty zaproponuj swoje, związane z informatyką</h3> 
+     <font color="cyan"
      <h2>2. Popularne interfejsy urządzeń peryferyjnych do komputera:</h2>
 
 <h3>B. Interfejsy na przesył obrazu</h3>
-<ol type="i"> <!-- małe rzymskie liczby -->
+<ol type="i" start=2> <!-- małe rzymskie liczby -->
 <li>HDMI
 <ul>
 <li>Type A - Standard</li>
@@ -134,7 +135,7 @@
 </ol>
 
 <h3>C. Interfejsy na przesył audio</h3>
-<ol type="i">
+<ol type="i" start=2>
 <li>Jack
 <ul>
 <li>Jack 6,3mm</li>
@@ -156,6 +157,7 @@
 </ul>
 </li>
 </ol>
+     </font>
        
           
 </body> 
