--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@
 </li>
 </ol>
      </font>
-       
+       <IMG SRC="rysun.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="rysun.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="rysun.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="rysun.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="rysun.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
           
 </body> 
 </body>
