--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 </li>
 </ol>
      </font>
-       <IMG SRC="rysun.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
-     <IMG SRC="rysun.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
-     <IMG SRC="rysun.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
-     <IMG SRC="rysun.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
-     <IMG SRC="rysun.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="rysunek.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="obrazek.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="jezioro.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="jesień.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+     <IMG SRC="obraz.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
           
 </body> 
 </body>
