--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
+       <IMG SRC="kot.gif" ALIGN=left BORDER=3 WIDTH=800 HEIGHT=534 ALT="grafika">
        <HR SIZE=5 WIDTH=60% ALIGN=LEFT COLOR=cyan>
         </fieldset>
  <fieldset>
