--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
      <LEGEND><h1 ALIGN="left">Żart o bombie</h1></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br>
+       <IMG SRC="bomba.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="grafika">
        <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=yellow>
         </fieldset>
   <fieldset>
@@ -47,13 +48,14 @@
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
-       <IMG SRC="kot.gif" ALIGN=left BORDER=3 WIDTH=800 HEIGHT=534 ALT="grafika">
+       <IMG SRC="kot.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="kot">
        <HR SIZE=5 WIDTH=60% ALIGN=LEFT COLOR=cyan>
         </fieldset>
  <fieldset>
      <LEGEND><h3 ALIGN="right">Żart o siatkarzach </h3></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
+      <IMG SRC="piłka.gif" ALIGN=center BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
       <HR SIZE=6 WIDTH=70% ALIGN=LEFT COLOR=purple>
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
