--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
      <LEGEND><h1 ALIGN="left">Żart o bombie</h1></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br>
-       <IMG SRC="bomba.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="grafika">
-       <IMG SRC="bomba.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="grafika">
+       <IMG SRC="bomba.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="bomba">
+       <IMG SRC="bomba.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="bomba">
        <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=yellow>
         </fieldset>
   <fieldset>
@@ -57,8 +57,8 @@
      <LEGEND><h3 ALIGN="right">Żart o siatkarzach </h3></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
-      <IMG SRC="piłka.gif" ALIGN=left BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
-       <IMG SRC="piłka.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+      <IMG SRC="piłka.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="piłka do siatkówki">
+       <IMG SRC="piłka.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="piłka do siatkówki">
       <HR SIZE=6 WIDTH=70% ALIGN=LEFT COLOR=purple>
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
