--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <meta charset="utf-8">
        <title>Kacper Kopacz</title>
 </head>
-<body> 
+<body>
+     <a name="skok_poczatek"></a>
  Kacper Kopacz
   <p align="left"> <font color="green" size="1" face"Arial">Kacper</font> </p> <br>
   <p align="left"> <font color="green" size="2" face"Arial">Kacper</font> </p> <br>
@@ -165,7 +166,7 @@
 </ol>
      </font>
      
-          
+  <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>         
 </body> 
 </body>
 </html>
