--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
 </ol>
      </font>
      
-  <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>         
+  <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>     
+     <A HREF="file:///C:/Users/uczen/Desktop/plik%20kopacz.html"> Tutaj jest link do Kopacz plik </A> 
+     
 </body> 
 </body>
 </html>
