--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
          Syn pyta się blondynki<br> 
         -Mamo to kot czy kotka<br>
         -Oczywiście że kot,bo przecież ma wąsy<br>
-       <IMG SRC="kot.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="kot">
-        <IMG SRC="kot.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="kot">
+       <IMG SRC="kot.jpg" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="kot">
+        <IMG SRC="kot.jpg" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="kot">
        <HR SIZE=5 WIDTH=60% ALIGN=LEFT COLOR=cyan>
         </fieldset>
  <fieldset>
