--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
      <LEGEND><h3 ALIGN="right">Żart o siatkarzach </h3></LEGEND> 
          Czemu siatkarze piją wode gazowaną<br> 
          By im się lepiej odbijają<br> 
-      <IMG SRC="piłka.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="piłka do siatkówki">
-       <IMG SRC="piłka.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="piłka do siatkówki">
+      <IMG SRC="Piłka.jpg" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="piłka do siatkówki">
+       <IMG SRC="Piłka.jpg" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="piłka do siatkówki">
       <HR SIZE=6 WIDTH=70% ALIGN=LEFT COLOR=purple>
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
