--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
      <LEGEND><h1 ALIGN="left">Żart o bombie</h1></LEGEND> 
          Gdzie jest Ania po wybuchu bomby<br> 
          Wszędzie<br>
-       <IMG SRC="bomba.jpg" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="bomba">
-       <IMG SRC="bomba.jpg" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="bomba">
+       <IMG SRC="bomba..jpg" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="bomba">
+       <IMG SRC="bomba..jpg" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="bomba">
        <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=yellow>
         </fieldset>
   <fieldset>
