--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
      </font>
      
   <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>     
-     <A HREF="file:///C:/Users/dell/OneDrive/Pulpit/poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A> 
+     <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A> 
      
 </body> 
 </body>
