--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 <br><br><br> 
      <h2> poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
      <h2> Ty zaproponuj swoje, związane z informatyką</h2>
+            <a name="skok_środek"></a>
            <h4>Nagłówki w treści strony WWW.</h4>
 <font color="red">       
            <OL TYPE=1 START=2>  
@@ -168,7 +169,8 @@
      
   <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>     
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A> 
-     
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A>
+      <a name="skok_koniec"></a>
 </body> 
 </body>
 </html>
