--- a/plik_Kopacz.html
+++ b/plik_Kopacz.html
@@ -6,8 +6,9 @@
              <title>plik_Kopacz</title> 
      </head> 
     <body>
-     <A href ="Kot.gif">k&nbsp;l&nbsp;i&nbsp;k&nbsp;Kliknij aby ściągnąć plik</A> 
+     <A HREF="przyklad2.html"> <IMG SRC="Kotek.gif">tutaj jest link </A> 
      <A HREF="https://akasulmin.github.io/PIERWSZE-ZADANIE/"> Wróć </A> 
  
     </body> 
+
   </html> 
