--- a/plik_Kopacz.html
+++ b/plik_Kopacz.html
@@ -6,9 +6,10 @@
              <title>plik_Kopacz</title> 
      </head> 
     <body>
-     <A HREF="przyklad2.html"> <IMG SRC="Kotek.gif">tutaj jest link </A> 
+     <A HREF="plik_Kopacz.html"> <IMG SRC="Kotek.gif">tutaj jest link </A> 
      <A HREF="https://akasulmin.github.io/PIERWSZE-ZADANIE/"> Wróć </A> 
  
     </body> 
 
   </html> 
+
