--- a/plik_Kopacz.html
+++ b/plik_Kopacz.html
@@ -6,11 +6,12 @@
              <title>plik_Kopacz</title> 
      </head> 
     <body>
-     <A HREF="Kot.gif"> <IMG SRC="Kotek.gif">tutaj jest link </A> 
+     <<A href ="Kot.gif">Kliknij aby ściągnąć plik</A> 
      <A HREF="https://akasulmin.github.io/PIERWSZE-ZADANIE/"> Wróć </A> 
  
     </body> 
 
   </html> 
+
 
 
