--- a/plik_Kopacz.html
+++ b/plik_Kopacz.html
@@ -6,12 +6,13 @@
              <title>plik_Kopacz</title> 
      </head> 
     <body>
-     <<A href ="Kot.gif"download>Kliknij aby ściągnąć plik</A> 
+     <<A href ="Kot.gif">Kliknij aby ściągnąć plik</A> 
      <A HREF="https://akasulmin.github.io/PIERWSZE-ZADANIE/"> Wróć </A> 
  
     </body> 
 
   </html> 
+
 
 
 
