--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
        <title>Kacper Kopacz</title>
 </head>
 <body>
-     <a name="skok_poczatek"></a>
+     <a href="#skok_Środek">kliknij aby skoczyć na początek tekstu</a><br>
+     <a href="#skok_koniec">kliknij aby skoczyć na środek tekstu</a><br>
+     <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
+     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
+     <A HREF="formularz_Kopacz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+      <a name="skok_początek></a>
  Kacper Kopacz
   <p align="left"> <font color="green" size="1" face"Arial">Kacper</font> </p> <br>
   <p align="left"> <font color="green" size="2" face"Arial">Kacper</font> </p> <br>
@@ -64,6 +70,13 @@
       nazwisko ucznia&nbsp;&nbsp;&nbsp;imie ucznia<br>
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
         </fieldset>
+          <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
+     <a href="#skok_koniec">kliknij aby skoczyć na środek tekstu</a><br>
+     <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
+     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
+     <A HREF="formularz_Kopacz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+      <a name="skok_Środek></a>
      <br><br><br>
           <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
           <h1> Ty zaproponuj swoje, związane z informatyką</h1> 
@@ -167,9 +180,12 @@
 </ol>
      </font>
      
-  <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>     
-     <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A> 
-     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A>
+  <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
+     <a href="#skok_Środek">kliknij aby skoczyć na środek tekstu</a><br>
+     <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
+     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
+     <A HREF="formularz_Kopacz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
 </body> 
 </body>
