--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
        <title>Kacper Kopacz</title>
 </head>
 <body>
-     <a href="#skok_Środek">kliknij aby skoczyć na początek tekstu</a><br>
-     <a href="#skok_koniec">kliknij aby skoczyć na środek tekstu</a><br>
+     <a href="#skok_Środek">kliknij aby skoczyć na środek tekstu</a><br>
+     <a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
@@ -71,7 +71,7 @@
      Kopacz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kacper<br>
         </fieldset>
           <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
-     <a href="#skok_koniec">kliknij aby skoczyć na środek tekstu</a><br>
+     <a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
