--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
        <title>Kacper Kopacz</title>
 </head>
 <body>
-     <a href="#skok_Środek">kliknij aby skoczyć na środek tekstu</a><br>
+     <a href="#skok_środek">kliknij aby skoczyć na środek tekstu</a><br>
      <a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
-     <A HREF="formularz_Kopacz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+     <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_początek></a>
  Kacper Kopacz
   <p align="left"> <font color="green" size="1" face"Arial">Kacper</font> </p> <br>
@@ -75,8 +75,8 @@
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
-     <A HREF="formularz_Kopacz.html"> Tutaj jest link do do Kopacz formularz </A><br>
-      <a name="skok_Środek></a>
+     <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+      <a name="skok_środek></a>
      <br><br><br>
           <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
           <h1> Ty zaproponuj swoje, związane z informatyką</h1> 
@@ -98,7 +98,6 @@
 <br><br><br> 
      <h2> poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
      <h2> Ty zaproponuj swoje, związane z informatyką</h2>
-            <a name="skok_środek"></a>
            <h4>Nagłówki w treści strony WWW.</h4>
 <font color="red">       
            <OL TYPE=1 START=2>  
@@ -181,11 +180,11 @@
      </font>
      
   <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
-     <a href="#skok_Środek">kliknij aby skoczyć na środek tekstu</a><br>
+     <a href="#skok_środek">kliknij aby skoczyć na środek tekstu</a><br>
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
-     <A HREF="formularz_Kopacz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+     <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
 </body> 
 </body>
