--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
+     <IMG SRC="Błąd_Kopacz.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
 </body> 
 </body>
 </html>
