--- a/index.html
+++ b/index.html
@@ -187,6 +187,41 @@
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
      <IMG SRC="Błąd_Kopacz.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
+     <table border=2> 
+   <caption>Tytuł tabela HTML</caption> 
+   <thead> 
+      <tr> 
+         <th>Kolumna 1</th> 
+         <th>Kolumna 2</th> 
+         <th>Kolumna 3</th> 
+         <th>Kolumna 4</th> 
+         <th>Kolumna 5</th> 
+      </tr> 
+   </thead> 
+   <tbody> 
+      <tr> 
+         <td>Komórka 1</td> 
+         <td>Komórka 2</td> 
+         <td>Komórka 3</td> 
+         <td>Komórka 4</td> 
+         <td>Komórka 5</td> 
+      </tr> 
+      <tr> 
+         <td>Komórka 6</td> 
+         <td>Komórka 7</td> 
+         <td>Komórka 8</td> 
+         <td>Komórka 9</td> 
+         <td>Komórka 10</td> 
+      </tr> 
+      <tr> 
+         <td>Komórka 11</td> 
+         <td>Komórka 12</td> 
+         <td>Komórka 13</td> 
+         <td>Komórka 14</td> 
+         <td>Komórka 15</td> 
+      </tr> 
+   </tbody> 
+</table>
 </body> 
 </body>
 </html>
