--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
-     <IMG SRC="Błąd_Kopacz.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
+     <IMG SRC="Błąd_Kopacz.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
+     <IMG SRC="Poprawione_Błąd_Kopacz.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Poprawione Błędy">
      <table border=2> 
    <caption>Tytuł tabela HTML</caption> 
    <thead> 
