--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
      <IMG SRC="Błąd_Kopacz.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
-     <IMG SRC="Poprawione_Błąd_Kopacz.gif" ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Poprawione Błędy">
+     <IMG SRC="Poprawione_Błędy_Kopacz.gif ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Poprawione Błędy">
      <table border=2> 
-   <caption>Tytuł tabela HTML</caption> 
+   <caption>Kacper Kopacz</caption> 
    <thead> 
       <tr> 
          <th>Kolumna 1</th> 
@@ -220,7 +220,28 @@
          <td>Komórka 13</td> 
          <td>Komórka 14</td> 
          <td>Komórka 15</td> 
-      </tr> 
+     </tr>
+     <tr>
+          <td>Komórka 16</td> 
+         <td>Komórka 17</td> 
+         <td>Komórka 18</td> 
+         <td>Komórka 19</td> 
+         <td>Komórka 20</td> 
+     </tr>
+         <tr>
+          <td>Komórka 21</td> 
+         <td>Komórka 22</td> 
+         <td>Komórka 23</td> 
+         <td>Komórka 24</td> 
+         <td>Komórka 25</td> 
+     </tr>
+         <tr>
+          <td>Komórka 26</td> 
+         <td>Komórka 27</td> 
+         <td>Komórka 28</td> 
+         <td>Komórka 29</td> 
+         <td>Komórka 30</td> 
+     </tr>
    </tbody> 
 </table>
 </body> 
