--- a/index.html
+++ b/index.html
@@ -188,10 +188,13 @@
       <a name="skok_koniec"></a>
      <IMG SRC="Błąd_Kopacz.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
      <IMG SRC="Poprawione_Błędy_Kopacz.gif ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Poprawione Błędy">
-     <table border=2> 
-   <caption>Kacper Kopacz</caption> 
+     <table style="border:6px solid red;border-collapse: collapse;"> 
+<!—szerokość obramowania 6px dla tabeli, styl obramowania  --> 
+   <caption>Tytuł tabela HTML</caption> 
+<!—tytuł tabeli --> 
    <thead> 
-      <tr> 
+      <tr style="border:3px solid black;border-collapse: collapse;"> 
+<!—obramowanie wiersza --> 
          <th>Kolumna 1</th> 
          <th>Kolumna 2</th> 
          <th>Kolumna 3</th> 
@@ -200,42 +203,51 @@
       </tr> 
    </thead> 
    <tbody> 
-      <tr> 
+      <tr style="font-family: Arial;font-size: 22px;"> 
+<!—zdefiniowanie rodzaju czcionki oraz jej wielkości --> 
          <td>Komórka 1</td> 
          <td>Komórka 2</td> 
          <td>Komórka 3</td> 
          <td>Komórka 4</td> 
          <td>Komórka 5</td> 
       </tr> 
-      <tr> 
-         <td>Komórka 6</td> 
+      <tr style="color: green;font-weight: bold;"> 
+<!—kolor czcionki oraz jej pogrubienie --> 
+         <td style="border:3px solid black;border-collapse: collapse;">Komórka 6</td> 
+<!—obramowanie jednej komórki --> 
          <td>Komórka 7</td> 
          <td>Komórka 8</td> 
          <td>Komórka 9</td> 
          <td>Komórka 10</td> 
       </tr> 
-      <tr> 
+      <tr style="background-color: #66CCFF;"> 
+<!—tło wiersza --> 
          <td>Komórka 11</td> 
          <td>Komórka 12</td> 
          <td>Komórka 13</td> 
          <td>Komórka 14</td> 
-         <td>Komórka 15</td> 
+         <td>Komórka 15</td>  
      </tr>
-     <tr>
+     <tr style="border:3px solid black;border-collapse: collapse;"> 
+<!—obramowanie wiersza --> 
           <td>Komórka 16</td> 
          <td>Komórka 17</td> 
          <td>Komórka 18</td> 
          <td>Komórka 19</td> 
          <td>Komórka 20</td> 
      </tr>
-         <tr>
+     <tr style="font-family: Arial;font-size: 22px;"> 
+<!—zdefiniowanie rodzaju czcionki oraz jej wielkości --> 
           <td>Komórka 21</td> 
          <td>Komórka 22</td> 
          <td>Komórka 23</td> 
          <td>Komórka 24</td> 
          <td>Komórka 25</td> 
      </tr>
-         <tr>
+     <tr style="color: green;font-weight: bold;"> 
+<!—kolor czcionki oraz jej pogrubienie --> 
+         <td style="border:3px solid black;border-collapse: collapse;">Komórka 6</td> 
+<!—obramowanie jednej komórki --> 
           <td>Komórka 26</td> 
          <td>Komórka 27</td> 
          <td>Komórka 28</td> 
