--- a/index.html
+++ b/index.html
@@ -246,15 +246,32 @@
      </tr>
      <tr style="color: green;font-weight: bold;"> 
 <!—kolor czcionki oraz jej pogrubienie --> 
-         <td style="border:3px solid black;border-collapse: collapse;">Komórka 6</td> 
+         <td style="border:3px solid black;border-collapse: collapse;">Komórka 26</td> 
 <!—obramowanie jednej komórki --> 
-          <td>Komórka 26</td> 
          <td>Komórka 27</td> 
          <td>Komórka 28</td> 
          <td>Komórka 29</td> 
          <td>Komórka 30</td> 
      </tr>
    </tbody> 
+</table>
+     <table border="1" style="width: 500px; height: 150px;"> 
+ <tr> 
+  <th></th> 
+  <th colspan="2">A i B</th> 
+  <th>C</th> 
+ </tr> 
+ <tr> 
+  <th>1</th> 
+  <td colspan="2">Komórka1 i Komórka2</td> 
+  <td>Komórka2</td> 
+ </tr> 
+ <tr> 
+  <th>2</th> 
+  <td>Komórka4</td> 
+  <td>Komórka5</td> 
+  <td>Komórka6</td> 
+ </tr> 
 </table>
 </body> 
 </body>
