--- a/index.html
+++ b/index.html
@@ -273,6 +273,25 @@
   <td>Komórka6</td> 
  </tr> 
 </table>
+     <table border="1" style="width: 500px; height: 150px;"> 
+ <tr> 
+  <th></th> 
+  <th>A</th> 
+  <th>B</th> 
+  <th>C</th> 
+ </tr> 
+ <tr> 
+  <th rowspan="2">1 i 2</th> 
+30 
+<td rowspan="2">Komórka1 i Komórka4</td> 
+<td>Komórka2</td> 
+<td>Komórka3</td> 
+</tr> 
+<tr> 
+</tr> 
+</table 
+<td>Komórka5</td> 
+<td>Komórka6</td> 
 </body> 
 </body>
 </html>
