--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
       <a name="skok_koniec"></a>
      <IMG SRC="Błąd_Kopacz.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
-     <IMG SRC="Poprawione_Błędy_Kopacz.gif ALIGN=right BORDER=3 WIDTH=300 HEIGHT=200 ALT="Poprawione Błędy">
+    <IMG SRC="Poprawione_Błędy_Kopacz.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
      <table style="border:6px solid red;border-collapse: collapse;"> 
 <!—szerokość obramowania 6px dla tabeli, styl obramowania  --> 
    <caption>Tytuł tabela HTML</caption> 
