--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
-      <a name="skok_początek></a>
+      <a name="skok_poczatek"></a> 
  Kacper Kopacz
   <p align="left"> <font color="green" size="1" face"Arial">Kacper</font> </p> <br>
   <p align="left"> <font color="green" size="2" face"Arial">Kacper</font> </p> <br>
@@ -76,7 +76,7 @@
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
-      <a name="skok_środek></a>
+      <a name="skok_środek"></a>
      <br><br><br>
           <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
           <h1> Ty zaproponuj swoje, związane z informatyką</h1> 
