--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
-      <a name="skok_poczatek"></a> 
+      <a name="skok_początek"></a> 
  Kacper Kopacz
   <p align="left"> <font color="green" size="1" face"Arial">Kacper</font> </p> <br>
   <p align="left"> <font color="green" size="2" face"Arial">Kacper</font> </p> <br>
