--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
      
   <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
      <a href="#skok_środek">kliknij aby skoczyć na środek tekstu</a><br>
-     <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
+     <A HREF="KacperKopa.html"> Tutaj jest link do Kopacz poczta </A><br> 
      <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
      <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
      <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
