--- a/KacperKopa.html
+++ b/KacperKopa.html
@@ -2,12 +2,12 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<meta name="author" content="KOWALSKI">
+<meta name="author" content="Kopacz">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Wykonał KOWALSKI</title>
 
-<!-- Autor: KOWALSKI -->
-<!-- Data wykonania: 2025-10-09 -->
+<!-- Autor:Kacper Kopacz -->
+<!-- Data wykonania:10.10.2025-->
 
 <style>
 body {
@@ -114,35 +114,31 @@ footer {
 <body>
 
 <header>
-    <h1>Hurtownia Telefonów Komórkowych</h1>
+    <h1>Hurtownia Telefonów Komórkowych Chlorian</h1>
 </header>
 
 <nav>
-    <a href="index.html">Strona główna</a> |
-    <a href="poczta_kowalski.html">Poczta</a>
+    <a href="index.html">Strona główna</a>
+    <a href="poczta_Kopacz.html">Poczta</a>
 </nav>
 
-<!-- Logo -->
 <div class="logo">
-    <img src="logo_kowalski.jpg" alt="Logo hurtowni telefonów komórkowych" style="width:100%; height:100%;">
+    <img src="telefon.jpg" alt="Logo hurtowni Chlorian" style="width:100%; height:100%;">
 </div>
 
-<!-- Linie poziome -->
 <hr class="hr1">
 <hr class="hr2">
 <hr class="hr3">
 
-<!-- Opis hurtowni z różnymi czcionkami, kolorami i stylami -->
 <div class="text-wrap colored-text">
-    <img src="logo_kowalski.jpg" alt="Logo hurtowni telefonów komórkowych" width="300" height="auto">
-    <p><strong>Nasza hurtownia</strong> oferuje <em>nowoczesne telefony komórkowe</em> i akcesoria GSM.  
-    <span>Zapewniamy szeroki wybór urządzeń</span>, atrakcyjne ceny oraz <u>profesjonalne doradztwo</u>.</p>
+    <img src="telefon.jpg" alt="Logo hurtowni Chlorian" width="300" height="auto">
+    <p><strong>Hurtownia Chlorian</strong> oferuje <em>nowoczesne i używane telefony komórkowe</em>.  
+    <span>Zapewniamy szeroki wybór urządzeń</span>, atrakcyjne ceny oraz <u>szybka dostawa</u>.</p>
 
     <p><b>Wyróżnia nas:</b> szybka realizacja zamówień, obsługa hurtowa i detaliczna oraz dbałość o klienta.  
     Dzięki wieloletniemu doświadczeniu gwarantujemy <strong>najwyższą jakość</strong> i <em>rzetelność usług</em>.</p>
 </div>
 
-<!-- Zakres działalności -->
 <div style="width: 80%; margin: auto;">
     <h2>Zakres działalności</h2>
     <ul>
@@ -154,14 +150,14 @@ footer {
     </ul>
 </div>
 
-<!-- Link powrotny -->
 <p style="text-align:center; margin-top:20px;">
     <a href="index.html" style="color: blue; font-weight:bold;">W R Ó Ć do strony głównej</a>
 </p>
 
 <footer>
-    © 2025 KOWALSKI
+ &copy;Kopacz
 </footer>
 
 </body>
 </html>
+
