--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
      <a href="#skok_środek">kliknij aby skoczyć na środek tekstu</a><br>
      <a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
-     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
-     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
-     <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do Kopacz plik </A><br>
+     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do Kopacz tabela </A><br>
+     <A HREF="formularz.html"> Tutaj jest link do Kopacz formularz </A><br>
       <a name="skok_początek"></a> 
  Kacper Kopacz
   <p align="left"> <font color="green" size="1" face"Arial">Kacper</font> </p> <br>
@@ -73,9 +73,9 @@
           <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
      <a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>
      <A HREF="poczta_Kopacz.html"> Tutaj jest link do Kopacz poczta </A><br> 
-     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
-     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
-     <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do Kopacz plik </A><br>
+     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do Kopacz tabela </A><br>
+     <A HREF="formularz.html"> Tutaj jest link do Kopacz formularz </A><br>
       <a name="skok_środek"></a>
      <br><br><br>
           <h1> poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h1> 
@@ -182,9 +182,10 @@
   <a href="#skok_początek">kliknij aby skoczyć na początek tekstu</a><br>
      <a href="#skok_środek">kliknij aby skoczyć na środek tekstu</a><br>
      <A HREF="KacperKopa.html"> Tutaj jest link do Kopacz poczta </A><br> 
-     <A HREF="plik_Kopacz.html"> Tutaj jest link do do Kopacz plik </A><br>
-     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do do Kopacz tabela </A><br>
-     <A HREF="formularz.html"> Tutaj jest link do do Kopacz formularz </A><br>
+     <A HREF="plik_Kopacz.html"> Tutaj jest link do Kopacz plik </A><br>
+     <A HREF="Tabela_Kopacz.html"> Tutaj jest link do Kopacz tabela </A><br>
+     <A HREF="formularz.html"> Tutaj jest link do  Kopacz formularz </A><br>
+     <A HREF="KacperKopa.html"> Tutaj jest link do do Kopacz sprawdzianu</A><br>
       <a name="skok_koniec"></a>
      <IMG SRC="Błąd_Kopacz.gif" ALIGN=left BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
     <IMG SRC="Poprawione_Błędy_Kopacz.gif" ALIGN=center BORDER=3 WIDTH=300 HEIGHT=200 ALT="Błędy">
