--- a/KacperKopa.html
+++ b/KacperKopa.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="author" content="Kopacz">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wykonał KOWALSKI</title>
+<title>Wykonał KOPACZ</title>
 
 <!-- Autor:Kacper Kopacz -->
 <!-- Data wykonania:10.10.2025-->
@@ -160,4 +160,5 @@ footer {
 
 </body>
 </html>
+
 
