Update links and fix HTML structure in Tabela_Kopacz

--- a/Tabela_Kopacz.html
+++ b/Tabela_Kopacz.html
@@ -6,7 +6,8 @@
              <title>Tabela_Kopacz</title> 
      </head> 
     <body> 
-    <A HREF="tabela.docx"> <IMG SRC="tabela.docx">tutaj jest link do Tabeli</A>
+    <A HREF="Tabela.html"> <IMG SRC="Tabela.html">tutaj jest link do Tabeli</A>
     <A HREF="https://akasulmin.github.io/PIERWSZE-ZADANIE/"> Wróć </A>
     </body> 
+
   </html> 
